--- a/index.html
+++ b/index.html
@@ -24,21 +24,40 @@
         </div>
 
         <h1>Searching isn’t hard.</h1>
-        <p class="subtitle">Watch how to do it in 3 easy steps.</p>
+        <p class="subtitle">Let’s do this together. Slowly.</p>
 
         <div class="search-shell">
           <input id="searchInput" type="text" placeholder="Type your question" autocomplete="off" />
-          <button id="searchButton" type="button">Google Search</button>
+          <button id="searchButton" type="button">Try Searching</button>
         </div>
 
         <ol class="steps">
-          <li id="step1">Type your question</li>
-          <li id="step2">Click search</li>
-          <li id="step3">Read the results</li>
+          <li id="step1">Type the question</li>
+          <li id="step2">Press the big button</li>
+          <li id="step3">Skim the results</li>
         </ol>
 
+        <div class="meme-wall">
+          <div class="meme-tag">B-tier inspiration corner</div>
+          <div class="meme-grid">
+            <img
+              class="meme-card tilt-left"
+              src="https://commons.wikimedia.org/wiki/Special:FilePath/Doge_homemade_meme.jpg"
+              alt="Doge meme with colorful text"
+            />
+            <img
+              class="meme-card tilt-right"
+              src="https://commons.wikimedia.org/wiki/Special:FilePath/Doge_homemade_meme_es.jpg"
+              alt="Doge meme with Spanish text"
+            />
+          </div>
+          <div class="meme-credit">
+            Images: Wikimedia Commons (CC0).
+          </div>
+        </div>
+
         <p class="footnote">
-          You’ll be redirected to Google shortly.
+          Redirecting in about 5 seconds. Patience is a skill.
         </p>
       </section>
     </main>
